Added nested list

--- a/session1/index.html
+++ b/session1/index.html
@@ -45,7 +45,21 @@
         <li>Robotics Lab</li>
     </ol>
 
-    
+    <!-- Nested Lists -->
+    <h3>Programs Offered</h3>
+
+    <ul>
+        <li>BS Information Technology</li>
+            <ul>
+                <li>Major in Web Development</li>
+                <li>Major in Data Science</li>
+                <li>Major in Cybersecurity</li>
+            </ul>
+        
+        <li>BS Criminology</li>
+        <li>BS Architecture</li>
+        <li>BS Engineering</li>
+    </ul>
 
 
 </body>
